# Ai-NorX

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/agents/engine/: __init__.py  loop.py
backend/app/agents/memory/: __init__.py  store.py
backend/app/agents/subagent/: __init__.py  manager.py
backend/app/agents/tools/: __init__.py  base.py  knowledge_search.py  registry.py  spawn.py  web_search.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  agents.py  auth.py  chat.py  conversations.py  files.py  health.py  models.py  webhooks.py
backend/app/core/auth/: __init__.py  clerk.py  deps.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/storage/: __init__.py  r2.py
backend/app/core/tenant/: __init__.py  context.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  models.py
backend/app/llm/: __init__.py
backend/app/llm/providers/: __init__.py  gateway.py
backend/app/rag/: __init__.py  embeddings.py  parsing.py
frontend/: .env.example  next.config.ts  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/[conversationId]/: page.tsx
frontend/src/app/chat/new/: page.tsx
frontend/src/app/css/: button.css  card.css  color-swatch.css  general-layouts.css  line-item.css
frontend/src/app/files/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/app/styles/: design-tokens.css  onyx-tokens.css
frontend/src/components/chat/: chat-layout.tsx  sidebar.tsx
frontend/src/components/ui/: dialog.tsx  toaster.tsx  tooltip.tsx
frontend/src/lib/: api.ts  utils.ts
