[project]
name = "ai-norx-backend"
version = "0.1.0"
description = "Ai NorX - Cloud AI Agent Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Redis / Cache
    "redis>=5.2.0",
    "upstash-redis>=1.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.10.0",
    "clerk-backend-api>=1.0.0",
    "httpx>=0.28.0",

    # Validation / Settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # LLM
    "litellm>=1.55.0",
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.8.0",

    # AI / Embeddings
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",

    # Document processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=2.0.0",

    # Object Storage (Cloudflare R2)
    "boto3>=1.35.0",
    "aioboto3>=13.3.0",

    # Web Search
    "httpx>=0.28.0",

    # Observability
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # Background tasks
    "celery>=5.4.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.11",
    "websockets>=14.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
